--- a/themes/cocoa/static/css/pygments.css
+++ b/themes/cocoa/static/css/pygments.css
@@ -1,268 +1,60 @@
-.hll {
-  background-color: #ffffcc;
-}
-.c {
-  color: #999988;
-  font-style: italic;
-}
-/* Comment */
-.err {
-  color: #a61717;
-  background-color: #e3d2d2;
-}
-/* Error */
-.k {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword */
-.o {
-  color: #000000;
-  font-weight: bold;
-}
-/* Operator */
-.cm {
-  color: #999988;
-  font-style: italic;
-}
-/* Comment.Multiline */
-.cp {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
-}
-/* Comment.Preproc */
-.c1 {
-  color: #999988;
-  font-style: italic;
-}
-/* Comment.Single */
-.cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
-}
-/* Comment.Special */
-.gd {
-  color: #000000;
-  background-color: #ffdddd;
-}
-/* Generic.Deleted */
-.ge {
-  color: #000000;
-  font-style: italic;
-}
-/* Generic.Emph */
-.gr {
-  color: #aa0000;
-}
-/* Generic.Error */
-.gh {
-  color: #999999;
-}
-/* Generic.Heading */
-.gi {
-  color: #000000;
-  background-color: #ddffdd;
-}
-/* Generic.Inserted */
-.go {
-  color: #888888;
-}
-/* Generic.Output */
-.gp {
-  color: #555555;
-}
-/* Generic.Prompt */
-.gs {
-  font-weight: bold;
-}
-/* Generic.Strong */
-.gu {
-  color: #aaaaaa;
-}
-/* Generic.Subheading */
-.gt {
-  color: #aa0000;
-}
-/* Generic.Traceback */
-.kc {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword.Constant */
-.kd {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword.Declaration */
-.kn {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword.Namespace */
-.kp {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword.Pseudo */
-.kr {
-  color: #000000;
-  font-weight: bold;
-}
-/* Keyword.Reserved */
-.kt {
-  color: #445588;
-  font-weight: bold;
-}
-/* Keyword.Type */
-.m {
-  color: #009999;
-}
-/* Literal.Number */
-.s {
-  color: #d01040;
-}
-/* Literal.String */
-.na {
-  color: #008080;
-}
-/* Name.Attribute */
-.nb {
-  color: #0086B3;
-}
-/* Name.Builtin */
-.nc {
-  color: #445588;
-  font-weight: bold;
-}
-/* Name.Class */
-.no {
-  color: #008080;
-}
-/* Name.Constant */
-.nd {
-  color: #3c5d5d;
-  font-weight: bold;
-}
-/* Name.Decorator */
-.ni {
-  color: #800080;
-}
-/* Name.Entity */
-.ne {
-  color: #990000;
-  font-weight: bold;
-}
-/* Name.Exception */
-.nf {
-  color: #990000;
-  font-weight: bold;
-}
-/* Name.Function */
-.nl {
-  color: #990000;
-  font-weight: bold;
-}
-/* Name.Label */
-.nn {
-  color: #555555;
-}
-/* Name.Namespace */
-.nt {
-  color: #000080;
-}
-/* Name.Tag */
-.nv {
-  color: #008080;
-}
-/* Name.Variable */
-.ow {
-  color: #000000;
-  font-weight: bold;
-}
-/* Operator.Word */
-.w {
-  color: #bbbbbb;
-}
-/* Text.Whitespace */
-.mf {
-  color: #009999;
-}
-/* Literal.Number.Float */
-.mh {
-  color: #009999;
-}
-/* Literal.Number.Hex */
-.mi {
-  color: #009999;
-}
-/* Literal.Number.Integer */
-.mo {
-  color: #009999;
-}
-/* Literal.Number.Oct */
-.sb {
-  color: #d01040;
-}
-/* Literal.String.Backtick */
-.sc {
-  color: #d01040;
-}
-/* Literal.String.Char */
-.sd {
-  color: #d01040;
-}
-/* Literal.String.Doc */
-.s2 {
-  color: #d01040;
-}
-/* Literal.String.Double */
-.se {
-  color: #d01040;
-}
-/* Literal.String.Escape */
-.sh {
-  color: #d01040;
-}
-/* Literal.String.Heredoc */
-.si {
-  color: #d01040;
-}
-/* Literal.String.Interpol */
-.sx {
-  color: #d01040;
-}
-/* Literal.String.Other */
-.sr {
-  color: #009926;
-}
-/* Literal.String.Regex */
-.s1 {
-  color: #d01040;
-}
-/* Literal.String.Single */
-.ss {
-  color: #990073;
-}
-/* Literal.String.Symbol */
-.bp {
-  color: #999999;
-}
-/* Name.Builtin.Pseudo */
-.vc {
-  color: #008080;
-}
-/* Name.Variable.Class */
-.vg {
-  color: #008080;
-}
-/* Name.Variable.Global */
-.vi {
-  color: #008080;
-}
-/* Name.Variable.Instance */
-.il {
-  color: #009999;
-}
-/* Literal.Number.Integer.Long */
+/* Background */ .chroma { color: #f8f8f2; background-color: #282a36 }
+/* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
+/* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
+/* LineHighlight */ .chroma .hl { display: block; width: 100%;background-color: #ffffcc }
+/* LineNumbersTable */ .chroma .lnt { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
+/* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
+/* Keyword */ .chroma .k { color: #ff79c6 }
+/* KeywordConstant */ .chroma .kc { color: #ff79c6 }
+/* KeywordDeclaration */ .chroma .kd { color: #8be9fd; font-style: italic }
+/* KeywordNamespace */ .chroma .kn { color: #ff79c6 }
+/* KeywordPseudo */ .chroma .kp { color: #ff79c6 }
+/* KeywordReserved */ .chroma .kr { color: #ff79c6 }
+/* KeywordType */ .chroma .kt { color: #8be9fd }
+/* NameAttribute */ .chroma .na { color: #50fa7b }
+/* NameBuiltin */ .chroma .nb { color: #8be9fd; font-style: italic }
+/* NameClass */ .chroma .nc { color: #50fa7b }
+/* NameFunction */ .chroma .nf { color: #50fa7b }
+/* NameLabel */ .chroma .nl { color: #8be9fd; font-style: italic }
+/* NameTag */ .chroma .nt { color: #ff79c6 }
+/* NameVariable */ .chroma .nv { color: #8be9fd; font-style: italic }
+/* NameVariableClass */ .chroma .vc { color: #8be9fd; font-style: italic }
+/* NameVariableGlobal */ .chroma .vg { color: #8be9fd; font-style: italic }
+/* NameVariableInstance */ .chroma .vi { color: #8be9fd; font-style: italic }
+/* LiteralString */ .chroma .s { color: #f1fa8c }
+/* LiteralStringAffix */ .chroma .sa { color: #f1fa8c }
+/* LiteralStringBacktick */ .chroma .sb { color: #f1fa8c }
+/* LiteralStringChar */ .chroma .sc { color: #f1fa8c }
+/* LiteralStringDelimiter */ .chroma .dl { color: #f1fa8c }
+/* LiteralStringDoc */ .chroma .sd { color: #f1fa8c }
+/* LiteralStringDouble */ .chroma .s2 { color: #f1fa8c }
+/* LiteralStringEscape */ .chroma .se { color: #f1fa8c }
+/* LiteralStringHeredoc */ .chroma .sh { color: #f1fa8c }
+/* LiteralStringInterpol */ .chroma .si { color: #f1fa8c }
+/* LiteralStringOther */ .chroma .sx { color: #f1fa8c }
+/* LiteralStringRegex */ .chroma .sr { color: #f1fa8c }
+/* LiteralStringSingle */ .chroma .s1 { color: #f1fa8c }
+/* LiteralStringSymbol */ .chroma .ss { color: #f1fa8c }
+/* LiteralNumber */ .chroma .m { color: #bd93f9 }
+/* LiteralNumberBin */ .chroma .mb { color: #bd93f9 }
+/* LiteralNumberFloat */ .chroma .mf { color: #bd93f9 }
+/* LiteralNumberHex */ .chroma .mh { color: #bd93f9 }
+/* LiteralNumberInteger */ .chroma .mi { color: #bd93f9 }
+/* LiteralNumberIntegerLong */ .chroma .il { color: #bd93f9 }
+/* LiteralNumberOct */ .chroma .mo { color: #bd93f9 }
+/* Operator */ .chroma .o { color: #ff79c6 }
+/* OperatorWord */ .chroma .ow { color: #ff79c6 }
+/* Comment */ .chroma .c { color: #6272a4 }
+/* CommentHashbang */ .chroma .ch { color: #6272a4 }
+/* CommentMultiline */ .chroma .cm { color: #6272a4 }
+/* CommentSingle */ .chroma .c1 { color: #6272a4 }
+/* CommentSpecial */ .chroma .cs { color: #6272a4 }
+/* CommentPreproc */ .chroma .cp { color: #ff79c6 }
+/* CommentPreprocFile */ .chroma .cpf { color: #ff79c6 }
+/* GenericDeleted */ .chroma .gd { color: #8b080b }
+/* GenericEmph */ .chroma .ge { text-decoration: underline }
+/* GenericHeading */ .chroma .gh { font-weight: bold }
+/* GenericInserted */ .chroma .gi { font-weight: bold }
+/* GenericOutput */ .chroma .go { color: #44475a }
+/* GenericSubheading */ .chroma .gu { font-weight: bold }
+/* GenericUnderline */ .chroma .gl { text-decoration: underline }
