new post: this is not a machine

--- a/themes/cocoa/layouts/partials/head.html
+++ b/themes/cocoa/layouts/partials/head.html
@@ -8,6 +8,8 @@
     {{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}
 {{ end }}
 </title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="canonical" href="{{ .Permalink }}">
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
